force-app/main/default/objects/contact_schedule__c/contact_schedule__c.object-meta.xml
<CustomObject>
    <label>得意先担当者スケジュール</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>得意先担当者スケジュール名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>