force-app/main/default/objects/contact_schedule__c/fields/contactCS__c.field-meta.xml
<CustomField>
    <fullName>contactCS__c</fullName>
    <label>*得意先担当者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>得意先担当者スケジュール</relationshipLabel>
    <relationshipName>coCS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>