force-app/main/default/objects/contact_schedule__c/fields/filledMonthCount__c.field-meta.xml
<CustomField>
    <fullName>filledMonthCount__c</fullName>
    <label>紹介済み月数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>