force-app/main/default/objects/contact_schedule__c/fields/fillingRate__c.field-meta.xml
<CustomField>
    <fullName>fillingRate__c</fullName>
    <formula>filledMonthCount__c /12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>埋り率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>