force-app/main/default/objects/contact_schedule__c/fields/isInCurrentFiscalYear__c.field-meta.xml
<CustomField>
    <fullName>isInCurrentFiscalYear__c</fullName>
    <formula>AND(
  targetYear__c &gt;=
    DATE(
      IF(MONTH(TODAY()) &gt;= 7, YEAR(TODAY()), YEAR(TODAY()) - 1),
      7,
      1
    ),
  targetYear__c &lt;
    DATE(
      IF(MONTH(TODAY()) &gt;= 7, YEAR(TODAY()) + 1, YEAR(TODAY())),
      7,
      1
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>当会計期間対象flg</label>
    <type>Checkbox</type>
</CustomField>