force-app/main/default/objects/contact_schedule__c/fields/isTargetRemindOfficeWork__c.field-meta.xml
<CustomField>
    <fullName>isTargetRemindOfficeWork__c</fullName>
    <formula>AND(
isTargetScheduleCfm__c,
OR(
AND(
Month(today())=1,
Year(today()) = Year( targetYear__c )+1,
OR(
property_1_1__c = &quot;a0mRC000000QceL&quot;,
property_1_2__c = &quot;a0mRC000000QceL&quot;,
property_1_3__c = &quot;a0mRC000000QceL&quot;
)
),

AND(
Month(today())=2,
Year(today()) = Year( targetYear__c )+1,
OR(
property_2_1__c = &quot;a0mRC000000QceL&quot;,
property_2_2__c = &quot;a0mRC000000QceL&quot;,
property_2_3__c = &quot;a0mRC000000QceL&quot;
)
),

AND(
Month(today())=3,
Year(today()) = Year( targetYear__c )+1,
OR(
property_3_1__c = &quot;a0mRC000000QceL&quot;,
property_3_2__c = &quot;a0mRC000000QceL&quot;,
property_3_3__c = &quot;a0mRC000000QceL&quot;
)
),
AND(
Month(today())=4,
Year(today()) = Year( targetYear__c )+1,
OR(
property_4_1__c = &quot;a0mRC000000QceL&quot;,
property_4_2__c = &quot;a0mRC000000QceL&quot;,
property_4_3__c = &quot;a0mRC000000QceL&quot;
)
),

AND(
Month(today())=5,
Year(today()) = Year( targetYear__c )+1,
OR(
property_5_1__c = &quot;a0mRC000000QceL&quot;,
property_5_2__c = &quot;a0mRC000000QceL&quot;,
property_5_3__c = &quot;a0mRC000000QceL&quot;
)
),
AND(
Month(today())=6,
Year(today()) = Year( targetYear__c )+1,
OR(
property_6_1__c = &quot;a0mRC000000QceL&quot;,
property_6_2__c = &quot;a0mRC000000QceL&quot;,
property_6_3__c = &quot;a0mRC000000QceL&quot;
)
),
AND(
Month(today())=7,
Year(today()) = Year( targetYear__c ),
OR(
property_7_1__c = &quot;a0mRC000000QceL&quot;,
property_7_2__c = &quot;a0mRC000000QceL&quot;,
property_7_3__c = &quot;a0mRC000000QceL&quot;
)
),

AND(
Month(today())=8,
Year(today()) = Year( targetYear__c ),
OR(
property_8_1__c = &quot;a0mRC000000QceL&quot;,
property_8_2__c = &quot;a0mRC000000QceL&quot;,
property_8_3__c = &quot;a0mRC000000QceL&quot;
)
),

AND(
Month(today())=9,
Year(today()) = Year( targetYear__c ),
OR(
property_9_1__c = &quot;a0mRC000000QceL&quot;,
property_9_2__c = &quot;a0mRC000000QceL&quot;,
property_9_3__c = &quot;a0mRC000000QceL&quot;
)
),
AND(
Month(today())=10,
Year(today()) = Year( targetYear__c ),
OR(
property_10_1__c = &quot;a0mRC000000QceL&quot;,
property_10_2__c = &quot;a0mRC000000QceL&quot;,
property_10_3__c = &quot;a0mRC000000QceL&quot;
)
),
AND(
Month(today())=11,
Year(today()) = Year( targetYear__c ),
OR(
property_11_1__c = &quot;a0mRC000000QceL&quot;,
property_11_2__c = &quot;a0mRC000000QceL&quot;,
property_11_3__c = &quot;a0mRC000000QceL&quot;
)
),
AND(
Month(today())=12,
Year(today()) = Year( targetYear__c ),
OR(
property_12_1__c = &quot;a0mRC000000QceL&quot;,
property_12_2__c = &quot;a0mRC000000QceL&quot;,
property_12_3__c = &quot;a0mRC000000QceL&quot;
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>事務作業リマインド対象flg</label>
    <type>Checkbox</type>
</CustomField>