force-app/main/default/objects/contact_schedule__c/fields/isTargetScheduleCfm__c.field-meta.xml
<CustomField>
    <fullName>isTargetScheduleCfm__c</fullName>
    <formula>OR(lastMonthFilledIn__c &lt;= DATE(YEAR(today()), MONTH(today()), 1), ISBLANK(lastMonthFilledIn__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>要スケジュール確認flg</label>
    <type>Checkbox</type>
</CustomField>