force-app/main/default/objects/contact_schedule__c/fields/lastMonthFilledIn__c.field-meta.xml
<CustomField>
    <fullName>lastMonthFilledIn__c</fullName>
    <label>スケジュール登録済最終月(*月初日付)</label>
    <type>Date</type>
</CustomField>