force-app/main/default/objects/contact_schedule__c/fields/OrderBy__c.field-meta.xml
<CustomField>
    <fullName>OrderBy__c</fullName>
    <formula>IF(  YEAR(  TODAY()  )  = YEAR(  targetYear__c )  , 1 
			,IF(  (YEAR(  TODAY()  ) - 1)  = YEAR(  targetYear__c )  , 2 
			,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>並び順</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>