force-app/main/default/objects/contact_schedule__c/fields/property_10_1__c.field-meta.xml
<CustomField>
    <fullName>property_10_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>10月_物件名_1</label>
    <referenceTo>property__c</referenceTo>
    <relationshipLabel>得意先担当者スケジュール (10月_物件名_1)</relationshipLabel>
    <relationshipName>property_10_1</relationshipName>
    <type>Lookup</type>
</CustomField>