force-app/main/default/objects/contact_schedule__c/fields/property_10_3_name__c.field-meta.xml
<CustomField>
    <fullName>property_10_3_name__c</fullName>
    <label>10月_物件名ラベル_3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>