force-app/main/default/objects/contact_schedule__c/fields/property_10__c.field-meta.xml
<CustomField>
    <fullName>property_10__c</fullName>
    <formula>&quot;# 1:&quot;&amp;HYPERLINK(&quot;https://forcecom175.lightning.force.com/lightning/r/contact_schedule__c/&quot;&amp;  property_10_1__c &amp;&quot;/view&quot;,  property_10_1_name__c )&amp;BR()
&amp;&quot;# 2:&quot;&amp;HYPERLINK(&quot;https://forcecom175.lightning.force.com/lightning/r/contact_schedule__c/&quot;&amp;  property_10_2__c &amp;&quot;/view&quot;, property_10_2_name__c)&amp;BR()
&amp;&quot;# 3:&quot;&amp;HYPERLINK(&quot;https://forcecom175.lightning.force.com/lightning/r/contact_schedule__c/&quot;&amp;  property_10_3__c &amp;&quot;/view&quot;, property_10_3_name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10月_物件名(*レポート用)</label>
    <type>Text</type>
</CustomField>