force-app/main/default/objects/contact_schedule__c/fields/property_12__c.field-meta.xml
<CustomField>
    <fullName>property_12__c</fullName>
    <formula>&quot;# 1:&quot;&amp;HYPERLINK(&quot;https://forcecom175.lightning.force.com/lightning/r/contact_schedule__c/&quot;&amp;  property_12_1__c &amp;&quot;/view&quot;,  property_12_1_name__c )&amp;BR()
&amp;&quot;# 2:&quot;&amp;HYPERLINK(&quot;https://forcecom175.lightning.force.com/lightning/r/contact_schedule__c/&quot;&amp;  property_12_2__c &amp;&quot;/view&quot;, property_12_2_name__c)&amp;BR()
&amp;&quot;# 3:&quot;&amp;HYPERLINK(&quot;https://forcecom175.lightning.force.com/lightning/r/contact_schedule__c/&quot;&amp;  property_12_3__c &amp;&quot;/view&quot;, property_12_3_name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>12月_物件名(*レポート用)</label>
    <type>Text</type>
</CustomField>