force-app/main/default/objects/contact_schedule__c/fields/taisyounen__c.field-meta.xml
<CustomField>
    <fullName>taisyounen__c</fullName>
    <label>対象年</label>
    <length>100</length>
    <type>Text</type>
</CustomField>