force-app/main/default/objects/contact_schedule__c/fields/targetYear__c.field-meta.xml
<CustomField>
    <fullName>targetYear__c</fullName>
    <label>対象年(*日付)</label>
    <type>Date</type>
</CustomField>