force-app/main/default/objects/contact_schedule__c/fields/yearNumberFilledIn__c.field-meta.xml
<CustomField>
    <fullName>yearNumberFilledIn__c</fullName>
    <formula>IF(monthNumberFilledIn__c &lt; 7, year(targetYear__c)+1, year(targetYear__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>記入済-年番号</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>