force-app/main/default/objects/contact_schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>contactCS__c</columns>
    <columns>taisyounen__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>isTargetScheduleCfm__c</columns>
    <columns>targetYear__c</columns>
    <columns>isInCurrentFiscalYear__c</columns>
    <columns>filledMonthCount__c</columns>
    <columns>isNextMonthBlank__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>